Fri Oct 25 10:04:04 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* src/.indent.pro: use -npcs removing space after function names

Fri Oct 25 00:44:44 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* doc/api_status.txt include/sybdb.h src/dblib/dblib.c:
	- Implement dbisopt().

Thu Oct 24 23:37:54 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* src/dblib/dblib.c:
	- Add support for some server-side dboptions.

Thu Oct 24 16:34:30 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* src/ctlib/ct.c src/ctlib/unittests/t0009.c
	  src/dblib/unittests/t0023.c src/tds/iconv.c src/tds/tdsstring.c
	  src/tds/token.c:
	- Clean up some warnings.

Thu Oct 24 15:42:18 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* include/sybdb.h src/dblib/dblib.c:
	- Add DBSTRING and DBOPTION structures, and some utility functions
	  to manipulate them,
	- Implement basic DBOPTION functionality for a few
	  client-side options.
	- Add some preliminary infrastructure for server-side options.
	- Use some of the DBPR* client-side options in the db*pr*()
	  data formatting functions.  Still no real DBPRLINELEN support...
	- Fix handling of compute rows in dbprrow() -- support multiple
	  compute columns in the same row.
	- Fix some warnings.
	- Hack to prevent core dump in dbadata(), don't call tds_get_null()
	  (Not really sure this is the correct fix).

Thu Oct 24 21:37:34 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/token.c:
	- fix malloc(0) problem coring on some platform
	* src/tds/util.c:
	- fix a core dump setting TDSDUMPCONFIG env

Thu Oct 24 14:19:38 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* doc/userguide.sgml src/odbc/odbc.c:
	- use language param for dsn configuration
	- updated doc

Thu Oct 24 12:31:46 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* include/tds.h src/odbc/connectparams.c src/odbc/odbc.c:
	* src/tds/config.c:
	- dsn modify on odbc (old freetds.conf stuff)
	* src/tds/convert.c: add fix for indentation
