@@ -1,3 +1,7 @@
+Fri Oct 25 18:51:32 EDT 2002	nsc <Nicholas_Castellano@acml.com>
+	* doc/api_status.txt include/ctpublic.h src/ctlib/ct.c:
+	- Add stub for ct_poll().
+
 Fri Oct 25 10:04:04 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
 	* src/.indent.pro: use -npcs removing space after function names
 
